# noodles

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  README.rst  cov.xml  index.html  params.json  pyproject.toml  requirements.txt  setup.py  tox.ini  worker.sh
datamodel/: model.py
doc/: Makefile  make.bat
docs/: index.html  style.css
engine/: __init__.py  data_arguments.py  data_graph.py  data_json.py  data_node.py  data_types.py  datamodel.py  decorator.py  run.py  run_common.py  run_fireworks.py  run_parallel.py  utility.py
examples/: Cosmology.ipynb  README.md  class-decorator.py  das5.py  ea.py  example-hybrid.py  example1.py  example2.py  example2_fireworks.py  maybe.py  million.py  nested.py  noodles  noodles.ini  run-on-das.py  static_sum.py
lib/: exceptions.py
noodles/: __init__.py  config.py  coroutines.py  data_arguments.py  data_graph.py  data_json.py  data_node.py  data_types.py  data_workflow.py  datamodel.py  decorator.py  deepmap.py  delay.py  draw_workflow.py  eval_data.py  jokes.py  logger.py  numpy_data.py  pilot_job.py  pretty_term.py  run.py  run_async.py  run_common.py  run_fireworks.py  run_hybrid.py  run_local.py  run_parallel.py  run_process.py  run_remote.py  run_xenon.py  storable.py  tutorial.py  utility.py  worker.py
notebooks/: .gitignore  An interactive introduction.ipynb  Noodles presentation.ipynb  Scratch.ipynb  Untitled.ipynb  control_your_flow.ipynb  custom.css  draw_workflow.py  errors.ipynb  first_steps.ipynb  (+7 more)
(+282 files in other folders)
