[tool.poetry]
name = "noodles"
version = "0.3.4"
description = "Worflow Engine"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyxenon = "^3.0.3"
numpy = "^1.22.2"
h5py = "^3.6.0"
filelock = "^3.4.2"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = "^6.3.1"
pep8 = "^1.7.1"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "^0.8.8"
flake8 = "^4.0.1"
pytest-flake8 = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "test"
]
